# phoibe

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  changelog.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  refactor_request.md
docs/: 00-fun-with-fields.ipynb  00-fun-with-wtg-scada.ipynb  01-demonstrate-layered.ipynb  01-demonstrate-rix.ipynb  01-demonstrate-trix-analyzer.ipynb  01-demonstrate-wtg-scada-corruption.ipynb  02-data-product-trix.ipynb
docs/reports/: profile_raw.yaml  qa_raw.json  report_bronze.yaml  report_raw.yaml
docs/trix/: summary.yaml
phoibe/artificial_data/: fields.py  turbine.py
phoibe/geography/: README.md  __init__.py
phoibe/geography/complexity/: rix.py  tididi.py
phoibe/geography/complexity/rix/: analyse.py  analyzer.py  config.py  evaluate.py  fieldsampler.py  geometry.py  interface.py  keys.py  profiles.py  rays.py  results.py  rix.py  sampler.py  schema.py  trix.py  writer.py
phoibe/geography/crs/: reproject.py
phoibe/geography/plot/: landmarks.py  raster.py
phoibe/layered/: README.md
phoibe/layered/application/: config.py  context.py  factory.py  registry.py  validator.py
phoibe/layered/core/: entities.py  interfaces.py  metadata.py
phoibe/layered/infrastructure/: detector.py  export.py  io.py
phoibe/layered/logging/: formatter.py  handler.py  logging.py
phoibe/layered/rules/: rule.py  rules_columns.py  rules_index.py  rules_power.py  rules_values.py
phoibe/synthetic_data/: README.md  __init__.py  _turbine_noise.py  _turbine_scada.py  fields.py  sites.py  turbine.py
tests/contract_tests/geography/complexity/: conftest.py  test_analyzer.py  test_rayprofile.py  test_rayprofiles.py  test_rayresults.py  test_writer.py
tests/contract_tests/layered/application/: test_factory.py  test_ruleregistry.py  test_validationconfig.py  test_validationcontext.py  test_validator.py
tests/contract_tests/layered/core/: test_entities.py  test_entities_layergatekeeper.py  test_entities_layerreport.py
tests/contract_tests/layered/infrastructure/: conftest.py  test_detector.py  test_io_dataloader.py  test_io_repository.py
tests/contract_tests/layered/logging/: test_contextmanager.py  test_formatter.py  test_handler.py  test_integration.py  test_loggerfactory.py
tests/contract_tests/layered/rules/: test_validation_rule.py
tests/integration_tests/geography/complexity/: test_analyzer.py  test_writer.py
tests/integration_tests/geography/crs/: test_reproject.py
tests/unit_tests/geography/complexity/: conftest.py  test_analyse.py  test_analyzer.py  test_config.py  test_evaluate.py  test_fieldsampler.py  test_fieldsampler_rio.py  test_geometry.py  test_interface.py  test_profiles.py  test_results.py  test_rix.py  test_sampler.py  test_schema.py  test_trix.py  test_writer.py
tests/unit_tests/layered/application/: test_registry.py  test_validator.py
tests/unit_tests/layered/core/: test_entities_layergatekeeper.py
tests/unit_tests/layered/infrastructure/: test_detector.py  test_io_dataloader.py  test_io_repository.py  test_reporter.py
tests/unit_tests/layered/logging/: conftest.py  test_formatter.py  test_logging.py
tests/unit_tests/layered/rules/: test_rules_column.py  test_rules_index.py  test_rules_index_availability.py  test_rules_index_data_gaps.py  test_rules_index_temporal_attributes.py  test_rules_power_curtailment_rule.py  test_rules_values_essential_ranges.py  test_rules_values_range_rule.py
