[project]
name = "phoibe"
version = "0.4.0"
description = "Repository holding high level functions"
authors = [{ name = "MR", email = "raffmatth@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "ergaleiothiki>=0.3.0",
    "openpyxl>=3.1.5",
    "rasterio>=1.5.0",
    "rioxarray>=0.20.0",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
    "xarray>=2025.12.0",
]

[dependency-groups]
dev=[
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.0.260204",
    "pdoc>=16.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.15",
    "types-python-dateutil>=2.9.0.20260518",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.33.0.20260518",
]


[project.optional-dependencies]
docs = [
    "ipykernel>=6.31",
    "cartopy>=0.25.0",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
# ergaleiothiki = { git = "git@github.com:rafm1101/ergaleiothiki.git", tag = "0.2.0" }
ergaleiothiki = { index = "nemea-index" }

[[tool.uv.index]]
name = "nemea-index"
url = "http://localhost:8080/simple/"
priority = "primary"

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple/"
priority = "supplemental"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fintech_customer_retention"]

[tool.vulture]
min_confidence = 80
paths = ['phoibe']
exclude = ['**/cachedir/*', '**/.venv/*']
sort_by_size = true
verbose = false

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
#strict = true
ignore_missing_imports = true

[mypy-yaml]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "phoibe.synthetic_data"
disallow_untyped_calls = false
disallow_untyped_defs = false

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [".venv/*", "__pycache__", "build/*", "dist/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ANN", "B905"]
"*.ipynb" = ["B006", "B008", "B018", "B905", "E402", "F821"]

[tool.ruff.format]
quote-style = "double"
